...
                                                                <color key="backgroundColor" red="0.9955433011" green="0.91806793210000004" blue="0.65087610480000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="40" id="ia9-Uu-xXR"/>
                                                                </constraints>
                                                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <state key="normal" title="Continue with E-mail"/>
                                                                <connections>
                                                                    <segue destination="MJv-fz-hUh" kind="presentation" id="nrq-aG-Eov"/>
                                                                </connections>
                                                            </button>
                                                        </subviews>
                                                    </stackView>
...
                                                <rect key="frame" x="32" y="40" width="350" height="37"/>
                                                <color key="backgroundColor" name="DictionaryCellColor"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="36" id="D5s-xy-xbv"/>
                                                </constraints>
                                                <segments>
                                                    <segment title="Sign in"/>
                                                    <segment title="Sign up"/>
                                                </segments>
                                                <color key="selectedSegmentTintColor" red="0.9955433011" green="0.91806793210000004" blue="0.65087610480000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <connections>
                                                    <action selector="loginOrRegister:" destination="AmC-be-JyG" eventType="valueChanged" id="tXQ-cw-6cY"/>
                                                </connections>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Full Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DZT-Fv-BEG">
                                                        <rect key="frame" x="0.0" y="0.0" width="350" height="40"/>
                                                        <color key="backgroundColor" name="DictionaryCellColor"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" keyboardType="namePhonePad" returnKeyType="continue" textContentType="name"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hhe-cy-BQl">
                                                        <rect key="frame" x="0.0" y="53" width="350" height="40"/>
                                                        <color key="backgroundColor" name="DictionaryCellColor"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="40" id="mlg-cD-i9h"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="continue" textContentType="username"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IXQ-46-1TH">
                                                        <rect key="frame" x="0.0" y="106" width="350" height="40"/>
                                                        <color key="backgroundColor" name="DictionaryCellColor"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="new-password"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="czS-T8-D7R">
...
