...
                                        <rect key="frame" x="20" y="179.5" width="374" height="55"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tyY-3Y-H3y" id="NL0-ZC-HqK">
                                            <rect key="frame" x="0.0" y="0.0" width="344.5" height="55"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="QMZ-ig-JYn">
                                                    <rect key="frame" x="58" y="0.0" width="278.5" height="55"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="18"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CWL-kn-hGA">
                                                    <rect key="frame" x="333" y="0.0" width="52" height="33"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="deviceDefaultSwitch" label="deviceDefaultSwitch">
                                                        <bool key="isElement" value="YES"/>
                                                    </accessibility>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="50" id="ag5-oP-V1V"/>
                                                    </constraints>
                                                </switch>
...
