...
                if viewModel?.theme == .light {
                    cell.accessoryType = .checkmark
                }
                return cell
            case 2:
                let cell = tableView.dequeueReusableCell(withIdentifier: "ThemeCell", for: indexPath) as! DefaultCell
                cell.textLabel?.text = "Dark"
                if viewModel?.theme == .dark {
                    cell.accessoryType = .checkmark
                }
                return cell
            default:
                return UITableViewCell()
...
