...
        super.didReceiveError(error)
    }
    
    @IBAction func loginOrRegister(_ sender: UISegmentedControl) {
        view.endEditing(true)
        if sender.selectedSegmentIndex == 0 {
            loginButton.setTitle("Sign in with Email", for: .normal)
            UIView.animate(withDuration: 0.4) {
                self.fullnameTextField.isHidden = true
                self.confirmPasswordTextField.isHidden = true
                self.confirmPasswordTextField.isEnabled = false
                self.privacyPolicy.isHidden = true
                self.passwordTextField.textContentType = .password
...
